[package]
name = "tiled_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom_xml = { path = "/home/chris/Documents/Create/Software/Language/Rust/Repository/Mine/nom_xml" }
tree = { path = "/home/chris/Documents/Create/Software/Language/Rust/Repository/Mine/my_lib/crates/tree" }
nom = "7.1.3"
ndarray = "0.15.6"
bevy = {version = "0.13.2", features = [
  "bevy_asset",
  "bevy_sprite",
  "png",

]}
