[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.71"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["me"]

[workspace.dependencies]
tiled_parse = { path = "crates/tiled_parse", version = "0.0.0" }
tree = { path = "crates/tree", version = "0.0.0" }
bevy_tiled_loader = { path = "crates/bevy_tiled_loader", version = "0.0.0" }

ndarray = "0.15.6"
