[package]
name = "bevy_tiled_loader"
version = "0.1.0"
edition = "2021"
description = "Asset loader for the Tiled data parsed."

# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled_parse.workspace = true
# my-dependency.workspace = true
# other-dev-dependency = "0.1.2"

# [dev-dependencies]
# my-dependency.workspace = true
# other-dev-dependency = "1.4.0"
