[package]
name = "bevy_tiled_loader"
version = "0.0.0"
edition = "2021"
description = "Asset loader for the Tiled data parsed."

# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled_parse.workspace = true
bevy = {version = "0.14.1", features = [
  "bevy_asset",
  "bevy_sprite",
  "png",

]}
bevy_rapier2d = { version = "0.27.0", optional = true }
# my-dependency.workspace = true
# other-dev-dependency = "0.1.2"

# [dev-dependencies]
# my-dependency.workspace = true
# other-dev-dependency = "1.4.0"
#

[features]
default = ["rapier2d_colliders"]
rapier2d_colliders = ["dep:bevy_rapier2d"]
# sprite3d = []
