[package]
name = "tree"
version = "0.0.0"
edition = "2021"

# description = "A sample sub-crate"

# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
